@@ -180,3 +180,4 @@ Revision	Version Updated		Log Message
 163		C++			Removed some unneeded files.
 164		C++			unions.txt now copied into build folder.
 165		C++			Flushing log output in case of disaster.
+166		C++			Fixed another parser bug.
